--- a/modbus-proxy/config.yaml
+++ b/modbus-proxy/config.yaml
@@ -1,7 +1,7 @@
-name: "modbus-proxy"
-description: "Proxy for Accessing modbus systems. Allows multiple client connections"
+name: "sec-modbus-proxy"
+description: "Proxy for Accessing modbus systems. Allows multiple client connections. Supposed to run along another mobus proxy instance running on port 502"
 version: "1.0.18"
-slug: "modbus_proxy"
+slug: "sec_modbus_proxy"
 arch:
   - aarch64
   - amd64
